# nooqie

./: Containerfile  LICENSE  README.md
nooqie/: Cargo.toml
nooqie/src/: lib.rs  main.rs
nooqie/src/commands/: llama.rs  mod.rs  ollama.rs  utils.rs  voice.rs
nooqie/tests/: ollama_tests.rs
