[package]
name = "nooqie"
version = "0.2.2"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serenity = "=0.12.2"
songbird = "0.4.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
