[package]
name = "nooqie"
version = "0.12.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.11.27", features = ["json"] }
rustls = { version = "0.23.11", features = ["ring"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serenity = { version = "=0.12.2", features = ["client", "voice"] }
songbird = { version = "0.4.2", features = ["builtin-queue"] }
symphonia = "0.5.4"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal"] }
